# pomodoro

./: CMakeLists.txt  glbackgroundwidget.cpp  glbackgroundwidget.h  message_box.cpp  message_box.h  pomodoro.pro  widget.cpp  widget.h
.github/workflows/: windows.yaml
